--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,1 +1,21 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: spring-boot-k8s-deployment
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: spring-boot-k8s
+  template:
+    metadata:
+      labels:
+        app: spring-boot-k8s
+    spec:
+      containers:
+      - name: spring-boot-k8s
+        image: hanish1997/shopping-cart1
+	imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 8070
 
